--- a/css/main.css
+++ b/css/main.css
@@ -309,27 +309,27 @@ a {
   justify-content: space-between;
 }
 .work__img {
+  display: flex;
   position: relative;
+  margin-right: 30px;
 }
 
-.section .section-title {
+.work__text {
+  display: block;
+  position: absolute;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  left: 0;
+  bottom: 0;
+  width: 100%;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 14px;
+  line-height: 1.14;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--primary-text-color);
-  margin-bottom: 50px;
-}
-
-.section .secondary-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--primary-text-color);
-  margin-bottom: 50px;
+  text-transform: uppercase;
+  color: var(--hero);
+  background: rgba(47, 48, 58, 0.8);
 }
 
 .section-images {
