--- a/sass/components/_section-work.scss
+++ b/sass/components/_section-work.scss
@@ -22,177 +22,12 @@
        }
 
        &__img {
-        display: block
+        display: flex;
         position: relative;
+        margin-right: 30px;
        }
 
-       &_text {
-         display: inline-block;
-    position: absolute;
-    padding-top: 27px;
-    padding-bottom: 27px;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--hero);
-    background: rgba(47, 48, 58, 0.8);
-       }
-}
-.section .section-title {
-
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-
-    color: var(--primary-text-color);
-    margin-bottom: 50px;
-
+       &__img:last-child {
+        margin-right: 0;
 }
 
-.section .secondary-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-
-    color: var(--primary-text-color);
-    margin-bottom: 50px;
-}
-
-.section-images {
-    display: flex;
-    justify-content: space-between;
-}
-
-.section-images .item+.item {
-    margin-left: 30px;
-}
-
-.item {
-
-    position: relative;
-}
-
-.section-item-img {
-    display: flex;
-    position: relative;
-}
-
-.section-text-image {
-    display: inline-block;
-    position: absolute;
-    padding-top: 27px;
-    padding-bottom: 27px;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--hero);
-    background: rgba(47, 48, 58, 0.8);
-}
-
-/* SECTION середина - іконки */
-
-
-.section-icons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 30px;
-    width: 270px;
-    height: 120px;
-
-    border-radius: 4px;
-    background-color: var(--button-bcg);
-}
-
-.section-secondary-block {
-
-    background-color: var(--hero);
-}
-
-/* SECTION IMAGES */
-
-
-.section-down {
-    display: flex;
-}
-
-.section-down .item+.item {
-    margin-left: 30px;
-}
-
-.section-secondary-block {
-    padding-top: 30px;
-    padding-bottom: 16px;
-}
-
-.section .section-title-second {
-
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-
-    color: var(--primary-text-color);
-}
-
-.section .section-text {
-    max-width: 270px;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-
-
-    /* color: var(--text-color); */
-}
-
-.section .section-name {
-
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 10px;
-
-    color: var(--primary-text-color);
-}
-
-.section .section-position {
-
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
-    letter-spacing: 0.03em;
-
-}
-
-/* .hyr {
-    width: 150px;
-    height: 150px;
-} */
-
-.bcg-item {
-    background-color: var(--hero);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-        0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-}
