--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,3 +5,5 @@
 @import './components/hero';
 @import './components/section-offer';
 @import './components/section-work';
+@import './components/section-team';
+@import './components/socials';
