--- a/sass/components/_section-work.scss
+++ b/sass/components/_section-work.scss
@@ -2,7 +2,6 @@
 /* ЧЕМ МЫ ЗАНИМАЕМСЯ - ФОТО ПЛЮС ТЕКСТ  */
 
 .work {
-       padding-top: 0;
 
        &__title {
     font-weight: 700;
@@ -30,4 +29,24 @@
        &__img:last-child {
         margin-right: 0;
 }
+}
+   .work__text {      
+   display: block;
+   position: absolute;
+   padding-top: 27px;
+   padding-bottom: 27px;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   font-weight: 700;
+   font-size: 14px;
+   line-height: 1.14;
+   text-align: center;
+   letter-spacing: 0.03em;
+   text-transform: uppercase;
+   color: var(--hero);
+   background: rgba(47, 48, 58, 0.8);
 
+   }
+
+  
