--- a/css/main.css
+++ b/css/main.css
@@ -414,15 +414,61 @@ a {
   width: 100%;
   height: 100%;
   align-items: center;
-  justify-items: center;
   justify-content: center;
   border-radius: 50%;
   border-radius: 50%;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .socials__link:hover, .socials__link:focus {
-  color: var(--text-link);
+  background-color: var(--text-link);
 }
-.socials__link .socials__icon {
+.socials .socials__link:hover .socials__icon,
+.socials .socials__link:focus .socials__icon {
   fill: var(--hero);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.clients__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+  margin-bottom: 50px;
+}
+.clients__list {
+  display: flex;
+}
+.clients__icons {
+  width: 170px;
+  height: 92px;
+}
+.clients__icons:not(:last-child) {
+  margin-right: 30px;
+}
+.clients__link {
+  display: flex;
+  width: 70px;
+  height: 70px;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--color-border-icon);
+  border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.clients__link:hover, .clients__link:focus {
+  border-color: var(--text-link);
+}
+.clients__names {
+  fill: var(--color-border-icon);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.clients__link:hover .clients__names,
+.clients__link:focus .clients__names {
+  fill: var(--text-link);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }/*# sourceMappingURL=main.css.map */
