--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -13,15 +13,11 @@
     &__box:not(:last-child) {
     margin-right: 10px;
 }
-
     &__icon {
+        // padding: 12px 12px;
     fill: var(--color-border-icon);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-// @include {hover-fill-white;}
 }
-
-
-
     &__link {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -29,21 +25,24 @@
     width: 100%;
     height: 100%;
     align-items: center;
-    justify-items: center;
     justify-content: center;
     border-radius: 50%;
-    
-
-@include hover-color-blue;
     border-radius: 50%;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    .socials__icon {
-        fill: var(--hero);}
-}
-
-
+  }
+    &__link:hover,
+    &__link:focus {
+        background-color: var(--text-link);
 
  }
+
+ .socials__link:hover .socials__icon,
+ .socials__link:focus .socials__icon {
+    fill: var(--hero);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+ } }
 
  
 
