--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,3 +7,4 @@
 @import './components/section-work';
 @import './components/section-team';
 @import './components/socials';
+@import './components/clients';
