--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,10 @@
 @import './components/section-team';
 @import './components/socials';
 @import './components/clients';
+@import './components/footer';
+@import './components/footer-links';
+@import './components/subscribe';
+@import './components/modal-window';
+@import './components/feedback';
+
+
