--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -102,3 +102,24 @@ fill: var(--hero);
       border-radius: 50px;
     }
   }
+
+      .logo__web {
+    color: var(--text-link)
+}
+
+    .logo__studio {
+    color: var(--logo-studio);
+}
+
+.invisible {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
