--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,27 @@ a {
   padding-bottom: 94px;
 }
 
+.logo__web {
+  color: var(--text-link);
+}
+
+.logo__studio {
+  color: var(--logo-studio);
+}
+
+.invisible {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
 .header {
   border-bottom: 1px solid;
 }
@@ -471,4 +492,403 @@ a {
 .clients__link:focus .clients__names {
   fill: var(--text-link);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer {
+  background-color: var(--bacground-color-hero);
+  padding-bottom: 60px;
+  padding-top: 60px;
+}
+.footer__box {
+  display: flex;
+  align-items: baseline;
+}
+.footer__main {
+  margin-right: 70px;
+}
+.footer__logo {
+  display: inline-flex;
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  /* margin-bottom: 20px; */
+  text-decoration: none;
+}
+.footer__logo--white {
+  color: var(--hero);
+}
+.footer__adress {
+  display: flex;
+  margin-top: 20px;
+}
+.footer__item:not(:last-child) {
+  margin-bottom: 9px;
+}
+.footer__item--adr {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  justify-content: space-between;
+  color: var(--hero);
+  text-decoration: none;
+}
+.footer__item--link {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--footer-color-text);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  text-decoration: none;
+}
+.footer__item--link:hover, .footer__item--link:focus {
+  color: var(--text-link);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.join {
+  margin-right: 93px;
+}
+.join__item {
+  text-transform: uppercase;
+  display: flex;
+  margin-bottom: 20px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  color: var(--hero);
+}
+.join__list {
+  display: flex;
+}
+.join__socials:not(:last-child) {
+  margin-right: 10px;
+}
+.join__link {
+  display: inline-block;
+  padding: 12px;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.join__icon {
+  fill: var(--hero);
+}
+.join__link:hover, .join__link:focus {
+  background-color: var(--text-link);
+  border-radius: 50%;
+}
+
+.signup {
+  display: block;
+}
+.signup__text {
+  display: flex;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--hero);
+}
+.signup__box {
+  display: flex;
+}
+.signup__input {
+  display: block;
+  width: 358px;
+  margin-left: auto;
+  padding: 15px 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: var(--bacground-color-hero);
+  color: rgba(255, 255, 255, 0.6);
+}
+.signup__button {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 12px;
+  padding-left: 29px;
+  padding-right: 28px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  background-color: var(--text-link);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  outline: var(--text-link);
+  cursor: pointer;
+  border: none;
+}
+.signup__signature {
+  display: flex;
+  margin-right: 10px;
+  letter-spacing: 0.06em;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  color: var(--hero);
+}
+.signup__icon {
+  display: flex;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 528px;
+  height: 581px;
+  padding: 40px;
+  border-radius: 4px;
+  background-color: var(--hero);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__button {
+  display: flex;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  min-width: 30px;
+  min-height: 30px;
+  padding: 6px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: var(--hero);
+  cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__button__icon {
+  fill: currentColor;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__button:hover {
+  fill: var(--text-link);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.modal.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.7);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.feedback {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 0 auto;
+}
+.feedback__title {
+  display: block;
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+.feedback__form {
+  display: flex;
+  flex-direction: column;
+}
+.feedback__field {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+.feedback__field--comment {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.feedback__field--policy {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin: auto;
+  margin-bottom: 30px;
+  overflow: hidden;
+}
+.feedback__field--policy::before {
+  content: "";
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  /* opacity: 1; */
+  width: 16px;
+  height: 15px;
+  border: 2px solid black;
+  border-radius: 2px;
+}
+.feedback__field:hover .feedback__field--accent, .feedback__field:focus .feedback__field--accent {
+  fill: var(--text-link);
+}
+.feedback__label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  margin-bottom: 4px;
+}
+.feedback__icon {
+  position: absolute;
+  left: 12px;
+  bottom: 11px;
+  fill: var(--logo-studio);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.feedback__input {
+  margin: 0;
+  width: 448px;
+  height: 40px;
+  left: 576px;
+  top: 314px;
+  border-radius: 4px;
+  padding: 12px 12px 12px 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.feedback__input:hover, .feedback__input:focus {
+  border-color: var(--text-link);
+}
+.feedback__text {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: transparent;
+  padding: 12px 16px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.feedback__text:hover, .feedback__text:focus {
+  border-color: var(--text-link);
+}
+.feedback__text::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.feedback__iconpolicy {
+  display: flex;
+  position: relative;
+  display: inline-block;
+  margin-right: 7px;
+  width: 16px;
+  height: 15px;
+}
+
+textarea {
+  resize: none;
+}
+
+.feedback__checkbox:checked + .feedback__iconpolicy > .check-icon {
+  opacity: 1;
+  border-color: transparent;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.feedback__checkbox:checked + .check-icon {
+  display: unset;
+}
+
+.check-icon {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  justify-content: center;
+  align-content: center;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  border-radius: 2px;
+  fill: var(--hero);
+  background-color: var(--text-link);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.feedback-submit {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin: auto;
+  padding-left: 56px;
+  padding-right: 55px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  background-color: var(--text-link);
+  color: var(--hero);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.feedback-submit:active,
+.feedback-submit:hover {
+  background-color: var(--button-hover);
+}
+
+.feedback-submit {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.policy-label {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
+}
+
+.policy-link {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  text-decoration: underline;
+  color: var(--text-link);
 }/*# sourceMappingURL=main.css.map */
