--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,5 +13,5 @@
 @import './components/subscribe';
 @import './components/modal-window';
 @import './components/feedback';
-
-
+@import './components/portfolio';
+@import './components/cases_portfolio';
