--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,10 @@ a {
   margin: -1px;
 }
 
+.portfolio-title {
+  display: none;
+}
+
 .header {
   border-bottom: 1px solid;
 }
@@ -814,38 +818,12 @@ a {
   width: 16px;
   height: 15px;
 }
-
-textarea {
-  resize: none;
-}
-
-.feedback__checkbox:checked + .feedback__iconpolicy > .check-icon {
+.feedback:checked + .feedback__iconpolicy + .feedback__icon {
   opacity: 1;
   border-color: transparent;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.feedback__checkbox:checked + .check-icon {
-  display: unset;
-}
-
-.check-icon {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  justify-content: center;
-  align-content: center;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  border-radius: 2px;
-  fill: var(--hero);
-  background-color: var(--text-link);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.feedback-submit {
+.feedback__submit {
   display: flex;
   align-items: center;
   text-align: center;
@@ -866,14 +844,48 @@ textarea {
   color: var(--hero);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.feedback-submit:active,
-.feedback-submit:hover {
+.feedback__submit:active, .feedback__submit:hover {
   background-color: var(--button-hover);
 }
 
-.feedback-submit {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.checkbox__icon {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  justify-content: center;
+  align-content: center;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  border-radius: 2px;
+  fill: var(--hero);
+  background-color: var(--text-link);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+textarea {
+  resize: none;
+}
+
+.checkbox__input:checked + .feedback__iconpolicy > .checkbox__icon {
+  opacity: 1;
+  border-color: transparent;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox__input:checked + .checkbox__icon {
+  display: unset;
+}
+
+.feedback__checkbox:checked + .feedback__iconpolicy > .check-icon {
+  opacity: 1;
+  border-color: transparent;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.feedback__checkbox:checked + .check-icon {
+  display: unset;
 }
 
 .policy-label {
@@ -891,4 +903,123 @@ textarea {
   letter-spacing: 0.03em;
   text-decoration: underline;
   color: var(--text-link);
+}
+
+.portfolio {
+  display: flex;
+  background-color: var(--hero);
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.portfolio__btnlist {
+  display: flex;
+  margin-bottom: 50px;
+  border: transparent;
+  list-style-type: none;
+  justify-content: center;
+  margin-bottom: 50px;
+  margin-top: 0;
+}
+.portfolio__item {
+  display: inline-flex;
+  margin-right: 8px;
+}
+.portfolio__item:last-child {
+  margin-right: 0;
+}
+.portfolio__btn {
+  font-family: inherit;
+  padding: 6px 22px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  background-color: var(--button-bcg);
+  color: var(--primary-text-color);
+  border: none;
+  cursor: pointer;
+  box-shadow: none;
+  border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio__btn:hover, .portfolio__btn:focus {
+  background-color: var(--text-link);
+  color: var(--hero);
+  box-shadow: inset 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
+.cases {
+  display: flex;
+  flex-wrap: wrap;
+}
+.cases__items {
+  margin-right: 30px;
+  margin-bottom: 30px;
+  background: #FFFFFF;
+}
+.cases__items:hover .cases__overlay {
+  transform: translateY(0);
+}
+.cases__items:nth-child(3n) {
+  margin-right: 0;
+}
+.cases__items:nth-last-child(-n+3) {
+  margin-bottom: 0;
+}
+.cases__link {
+  display: block;
+  text-decoration: none;
+}
+.cases__link:hover, .cases__link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.cases__thumb {
+  display: block;
+  position: relative;
+  overflow: hidden;
+}
+.cases__overlay {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
+  color: var(--hero);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.55;
+  text-align: left;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.cases__img {
+  display: block;
+}
+.cases__block {
+  padding: 20px 0;
+  border-top: none;
+  border: 1px solid #EEEEEE;
+}
+.cases__title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  padding-right: 24px;
+  padding-left: 24px;
+  text-decoration: none;
+  color: var(--primary-text-color);
+}
+.cases__text {
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  padding-right: 24px;
+  padding-left: 24px;
+  color: var(--text-color);
 }/*# sourceMappingURL=main.css.map */
