--- a/sass/components/_feedback.scss
+++ b/sass/components/_feedback.scss
@@ -135,70 +135,13 @@
     height: 15px;
 
     }
-}
-    
-
-  
-
-
-textarea {
-    resize: none;
-}
-
-
-
-// .iconpolicy {
-//     display: flex;
-//     position: relative;
-//     display: inline-block;
-//     margin-right: 7px;
-//     width: 16px;
-//     height: 15px;
-
-// }
-
-.feedback__checkbox:checked+.feedback__iconpolicy>.check-icon {
-    opacity: 1;
+  &:checked+&__iconpolicy+&__icon {
+     opacity: 1;
     border-color: transparent;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  }
 
-.feedback__checkbox:checked+.check-icon {
-    display: unset;
-}
-
-// .invisible {
-//     position: absolute;
-//     white-space: nowrap;
-//     width: 1px;
-//     height: 1px;
-//     overflow: hidden;
-//     border: 0;
-//     padding: 0;
-//     clip: rect(0 0 0 0);
-//     clip-path: inset(50%);
-//     margin: -1px;
-// }
-
-.check-icon {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    justify-content: center;
-    align-content: center;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    border-radius: 2px;
-    fill: var(--hero);
-    background-color: var(--text-link);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-
-
-.feedback-submit {
+  &__submit {
     display: flex;
     align-items: center;
     text-align: center;
@@ -223,14 +166,58 @@ textarea {
 
 }
 
-.feedback-submit:active,
-.feedback-submit:hover {
+&__submit:active,
+&__submit:hover {
     background-color: var(--button-hover);
 }
 
-.feedback-submit {
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+  }
+
+.checkbox {
+    
+    &__icon {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    justify-content: center;
+    align-content: center;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    border-radius: 2px;
+    fill: var(--hero);
+    background-color: var(--text-link);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    }
+
+    }
+    
+
+textarea {
+    resize: none;
+}
+
+.checkbox__input:checked+.feedback__iconpolicy>.checkbox__icon {
+    opacity: 1;
+    border-color: transparent;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox__input:checked+.checkbox__icon {
+    display: unset;
+}
+
+.feedback__checkbox:checked+.feedback__iconpolicy>.check-icon {
+    opacity: 1;
+    border-color: transparent;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.feedback__checkbox:checked+.check-icon {
+    display: unset;
 }
 
 .policy-label {
@@ -249,111 +236,3 @@ textarea {
     text-decoration: underline;
     color: var(--text-link);
 }
-
-// .feedback-label {
-//     /* display: inline-block; */
-//     font-weight: 400;
-//     font-size: 12px;
-//     line-height: 1.16;
-//     letter-spacing: 0.01em;
-//     margin-bottom: 4px;
-// }
-
-// .feedback-input {
-//     margin: 0;
-//     width: 448px;
-//     height: 40px;
-//     left: 576px;
-//     top: 314px;
-
-//     border: 1px solid rgba(33, 33, 33, 0.2);
-//     border-radius: 4px;
-// }
-
-// .form-field,
-// .comment-field {
-//     position: relative;
-//     display: flex;
-//     flex-direction: column;
-//     margin-bottom: 10px;
-//     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-// }
-
-// .feedback__icon {
-//     position: absolute;
-//     left: 12px;
-//     bottom: 11px;
-//     fill: var(--logo-studio);
-//     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-// }
-
-// .feedback-input {
-//     margin: 0;
-//     padding: 12px 12px 12px 42px;
-//     border: 1px solid rgba(33, 33, 33, 0.2);
-//     border-radius: 4px;
-//     outline: transparent;
-//     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-// }
-
-// .feedback-input:hover,
-// .feedback-input:focus {
-//     border-color: var(--text-link);
-// }
-
-// .feedback__input:hover+.feedback__icon,
-// .feedback__input:focus+.feedback__icon {
-//     fill: var(--text-link);
-// }
-
-// .feedback-text {
-//     width: 100%;
-//     height: 120px;
-//     border: 1px solid rgba(33, 33, 33, 0.2);
-//     border-radius: 4px;
-//     outline: transparent;
-//     padding: 12px 16px;
-//     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-// }
-
-// .feedback-text:hover,
-// .feedback-text:focus {
-//     border-color: var(--text-link);
-// }
-
-
-// .feedback-text::placeholder {
-//     font-weight: 400;
-//     font-size: 12px;
-//     line-height: 1.16;
-//     letter-spacing: 0.01em;
-//     color: rgba(117, 117, 117, 0.5);
-// }
-
-// .policy-field {
-//     position: relative;
-//     display: flex;
-//     align-items: center;
-//     margin: auto;
-//     margin-bottom: 30px;
-//     overflow: hidden;
-// }
-
-
-
-// .policy-field::before {
-//     content: "";
-//     position: absolute;
-//     align-items: center;
-//     justify-content: center;
-//     display: flex;
-//     /* opacity: 1; */
-//     width: 16px;
-//     height: 15px;
-//     border: 2px solid black;
-//     border-radius: 2px;
-
-// }
-
-
