--- a/sass/components/_footer-links.scss
+++ b/sass/components/_footer-links.scss
@@ -30,8 +30,7 @@
     border-radius: 50%;
 
     background-color: rgba(255, 255, 255, 0.1);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    @include transition-bcgcolor;
     }
 
     &__icon {
@@ -41,8 +40,8 @@
 
    &__link:hover,
     &__link:focus {
-          background-color: var(--text-link);
-    border-radius: 50%;
+        background-color: var(--text-link);
+        border-radius: 50%;
     }
 }
 
