--- a/css/main.css
+++ b/css/main.css
@@ -261,7 +261,8 @@ a {
   padding: 10px 32px;
   margin-left: auto;
   margin-right: auto;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
