--- a/sass/components/_feedback.scss
+++ b/sass/components/_feedback.scss
@@ -32,7 +32,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @include transition-fill;
     }
 
     &--policy {
@@ -76,7 +76,7 @@
     left: 12px;
     bottom: 11px;
     fill: var(--logo-studio);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @include transition-fill;
 
   
     }
@@ -162,8 +162,7 @@
     border: none;
     background-color: var(--text-link);
     color: var(--hero);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    @include transition-bcgcolor;
 }
 
 &__submit:active,
