--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -65,7 +65,7 @@
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @include transition-color;
 
     &--current,
     &:hover,
@@ -107,7 +107,7 @@
     &:hover,
     &:focus {
         fill: var(--text-link);}
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     @include transition-fill;
 
 }
 
