--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -44,8 +44,8 @@
     margin-left: auto;
     margin-right: auto;
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @include transition-color;
+    @include transition-bcgcolor;
 
     font-weight: 700;
     font-size: 16px;
