--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -87,21 +87,15 @@ background-color: var(--text-link);
     }
   }
 
-    @mixin hover-fill-white {
-    &:hover,
-    &:focus {
-fill: var(--hero);
-    }
-  }
 
-  @mixin button-hover-team {
-    .selection:hover .socials__icon,
-    .selection:focus .socials__icon {
-      background-color: var(--text-link);
-      fill: var(--hero);
-      border-radius: 50px;
-    }
-  }
+@mixin transition-fill {
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+
+@mixin transition-color {
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+
+@mixin transition-bcgcolor {
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
       .logo__web {
     color: var(--text-link)
