--- a/sass/components/_section-work.scss
+++ b/sass/components/_section-work.scss
@@ -2,7 +2,7 @@
 /* ЧЕМ МЫ ЗАНИМАЕМСЯ - ФОТО ПЛЮС ТЕКСТ  */
 
 .work {
-
+      padding-top: 0;
        &__title {
     font-weight: 700;
     font-size: 36px;
