--- a/css/main.css
+++ b/css/main.css
@@ -318,6 +318,9 @@ a {
 }
 
 /* ЧЕМ МЫ ЗАНИМАЕМСЯ - ФОТО ПЛЮС ТЕКСТ  */
+.work {
+  padding-top: 0;
+}
 .work__title {
   font-weight: 700;
   font-size: 36px;
